--- a/.insomnia/Request/req_03c555008cff4bde8826a7d549a6dfc4.yml
+++ b/.insomnia/Request/req_03c555008cff4bde8826a7d549a6dfc4.yml
@@ -1,9 +1,9 @@
 _id: req_03c555008cff4bde8826a7d549a6dfc4
 type: Request
 parentId: fld_c95ee530fc4a4cf3925b5fb9cc95f1cf
-modified: 1606160224103
+modified: 1606164239505
 created: 1606160224103
-url: http://localhost:8000/api/actualizarEstadoTercero/2/1
+url: "{{ urlbase }}/actualizarEstadoTercero/2/1"
 name: actualizarEstadoTercero
 description: |-
   actualizar estado tercero
@@ -20,6 +20,7 @@ body:
     - value: Desactivado
       name: descripcion
       disabled: false
+      id: pair_297084d4ac2c4af38df3a2caf1dcf5fa
   mimeType: application/x-www-form-urlencoded
 parameters: []
 headers: []
