--- a/.insomnia/Request/req_06bf72ce7c95453699a31ee234359c7e.yml
+++ b/.insomnia/Request/req_06bf72ce7c95453699a31ee234359c7e.yml
@@ -1,12 +1,13 @@
 _id: req_06bf72ce7c95453699a31ee234359c7e
 type: Request
 parentId: fld_06dc135522c645d8bd3316011933ed87
-modified: 1606160487568
+modified: 1606164040591
 created: 1606160487568
-url: http://localhost:8000/api/eliminarEquivalenciaProducto/8/1
-name: http://localhost:8000/api/eliminarEquivalenciaProducto/8/1
+url: "{{ urlbase }}/eliminarEquivalenciaProducto/8/1"
+name: eliminarEquivalenciaProducto/8/1
 description: |-
   parametros url: cod_equivalencia,cod_empresa
+
   {
       "code": 200,
       "message": "Se elimino el registro",
