--- a/.insomnia/Request/req_2514b99ec5c64f41a3c0ee240757623f.yml
+++ b/.insomnia/Request/req_2514b99ec5c64f41a3c0ee240757623f.yml
@@ -1,9 +1,9 @@
 _id: req_2514b99ec5c64f41a3c0ee240757623f
 type: Request
 parentId: fld_06dc135522c645d8bd3316011933ed87
-modified: 1606160487562
+modified: 1606164062884
 created: 1606160487562
-url: http://localhost:8000/api/listarEquivalenciaProductosPorSistema/1
+url: "{{ urlbase }}/listarEquivalenciaProductosPorSistema/1"
 name: listarEquivalenciaProductosPorSistema
 description: |-
   parametro url:cod_sistema
