--- a/.insomnia/Request/req_4c49078f4343451dae7acbedeed0504e.yml
+++ b/.insomnia/Request/req_4c49078f4343451dae7acbedeed0504e.yml
@@ -1,9 +1,9 @@
 _id: req_4c49078f4343451dae7acbedeed0504e
 type: Request
 parentId: fld_6cc84aea86fc4e6baf06fe033905310e
-modified: 1606160461314
+modified: 1606164138431
 created: 1606160461314
-url: http://localhost:8000/api/agregarDetalleFt/1
+url: "{{ urlbase }}/agregarDetalleFt/1"
 name: agregarDetalleFt
 description: |-
   parametros url:cod_empresa
@@ -18,12 +18,15 @@ body:
     - value: "1"
       name: cod_ft_producto
       disabled: false
+      id: pair_d7e456c7fddd495d8eb40d8ef4b75e2e
     - value: Nombre cientifico
       name: descripcion
       disabled: false
+      id: pair_321031f6a6d74c198ca4154326227293
     - value: "1"
       name: cod_tipo_datos_ft
       disabled: false
+      id: pair_3453693a67a14284a90a46264e97a043
   mimeType: application/x-www-form-urlencoded
 parameters: []
 headers: []
