--- a/.insomnia/Request/req_5223b5fc75f04f689b1b62f794b479a5.yml
+++ b/.insomnia/Request/req_5223b5fc75f04f689b1b62f794b479a5.yml
@@ -1,9 +1,9 @@
 _id: req_5223b5fc75f04f689b1b62f794b479a5
 type: Request
 parentId: fld_6cc84aea86fc4e6baf06fe033905310e
-modified: 1606160461291
+modified: 1606164176496
 created: 1606160461291
-url: http://localhost:8000/api/eliminarDetalleFt/5/2
+url: "{{ urlbase }}/eliminarDetalleFt/5/2"
 name: eliminarDetalleFt
 description: |-
   parametro por url: cod_ft,cod_empresa
