--- a/.insomnia/Request/req_64ccd566ad4d4cc580aa572318ed0a16.yml
+++ b/.insomnia/Request/req_64ccd566ad4d4cc580aa572318ed0a16.yml
@@ -1,9 +1,9 @@
 _id: req_64ccd566ad4d4cc580aa572318ed0a16
 type: Request
 parentId: fld_6cc84aea86fc4e6baf06fe033905310e
-modified: 1606160461296
+modified: 1606164168014
 created: 1606160461296
-url: http://localhost:8000/api/listarDetallesFtPorFichaTecnica/1
+url: "{{ urlbase }}/listarDetallesFtPorFichaTecnica/1"
 name: listarDetallesFtPorFichaTecnica
 description: |-
   parametro por url: cod_ft(ficha tecnica)
