--- a/.insomnia/Request/req_7a075522de6e400db485d063e38f1644.yml
+++ b/.insomnia/Request/req_7a075522de6e400db485d063e38f1644.yml
@@ -1,10 +1,10 @@
 _id: req_7a075522de6e400db485d063e38f1644
 type: Request
 parentId: fld_35671c9fe23d40d48da3bb59b29dd0c8
-modified: 1606160508748
+modified: 1606163971653
 created: 1606160508748
-url: http://localhost:8000/api/actualizarTipoComision/1/1
-name: http://localhost:8000/api/actualizarTipoComision/1/1
+url: "{{ urlbase }}/actualizarTipoComision/1/1"
+name: actualizarTipoComision/1/1
 description: |-
   parametros url :cod_comision,cod_empresa
   {
@@ -18,6 +18,7 @@ body:
     - value: comision3
       name: descripcion
       disabled: false
+      id: pair_00597aaa1a324519a554d47addbbcce6
   mimeType: application/x-www-form-urlencoded
 parameters: []
 headers: []
