--- a/.insomnia/Request/req_7ab98c50b7424ac3b571b94ed253f333.yml
+++ b/.insomnia/Request/req_7ab98c50b7424ac3b571b94ed253f333.yml
@@ -1,9 +1,9 @@
 _id: req_7ab98c50b7424ac3b571b94ed253f333
 type: Request
 parentId: fld_54e5effc88534f75841ec58ec084c22d
-modified: 1606160446609
+modified: 1606164196083
 created: 1606160446609
-url: http://localhost:8000/api/listarSistemasTerceros
+url: "{{ urlbase }}/listarSistemasTerceros"
 name: listarSistemasTerceros
 description: |-
   {
