--- a/.insomnia/Request/req_af8a611e4d58498285ba43d6484c79e0.yml
+++ b/.insomnia/Request/req_af8a611e4d58498285ba43d6484c79e0.yml
@@ -1,9 +1,9 @@
 _id: req_af8a611e4d58498285ba43d6484c79e0
 type: Request
 parentId: fld_6cc84aea86fc4e6baf06fe033905310e
-modified: 1606160461303
+modified: 1606164158663
 created: 1606160461303
-url: http://localhost:8000/api/listarDetallesFt
+url: "{{ urlbase }}/listarDetallesFt"
 name: listarDetallesFt
 description: |-
   {
