--- a/.insomnia/Request/req_df5c9552ca384683adbaa8f6187f07af.yml
+++ b/.insomnia/Request/req_df5c9552ca384683adbaa8f6187f07af.yml
@@ -1,7 +1,7 @@
 _id: req_df5c9552ca384683adbaa8f6187f07af
 type: Request
 parentId: fld_858ab4f41a144ca78d433e73cc4efb6a
-modified: 1606163206869
+modified: 1606165705996
 created: 1606161253252
 url: "{{ urlbase }}/login"
 name: login
@@ -30,6 +30,7 @@ description: >-
   }
 method: POST
 body:
+  mimeType: multipart/form-data
   params:
     - value: UsuariopruebPreparador
       name: usuario
@@ -39,9 +40,10 @@ body:
       name: clave
       disabled: false
       id: pair_46e8fcf1855c41cb85a1734669cf82d2
-  mimeType: application/x-www-form-urlencoded
 parameters: []
-headers: []
+headers:
+  - name: Content-Type
+    value: multipart/form-data
 authentication:
   type: bearer
   disabled: false
