--- a/.insomnia/Request/req_874453047c5b48dbb3d2396e9c455273.yml
+++ b/.insomnia/Request/req_874453047c5b48dbb3d2396e9c455273.yml
@@ -1,11 +1,22 @@
 _id: req_874453047c5b48dbb3d2396e9c455273
 type: Request
 parentId: fld_a79f8981e88a4c65b853d788dcf47e4d
-modified: 1606312979124
+modified: 1606313062134
 created: 1606312847750
 url: "{{ urlbase }}/filterEmpresa/empresaDe"
 name: filterEmpresa
-description: ""
+description: |-
+  parametro url:nombre de la empresa o identificacion
+  {
+    "code": 200,
+    "message": "Ok",
+    "data": [
+      {
+        "cod": 1,
+        "razon_social": "empresaDemo"
+      }
+    ]
+  }
 method: GET
 body: {}
 parameters: []
