--- a/.insomnia/Request/req_b5149217048c4f3fa8ac476762a5bc01.yml
+++ b/.insomnia/Request/req_b5149217048c4f3fa8ac476762a5bc01.yml
@@ -1,21 +1,20 @@
 _id: req_b5149217048c4f3fa8ac476762a5bc01
 type: Request
 parentId: fld_01af4dc723a249689471861dc2877570
-modified: 1606162080089
+modified: 1607026536854
 created: 1606161389597
 url: "{{ urlbase }}/cambiarEstadoSolicitudAfili"
 name: cambiarEstadoSolicitudAfiliado
-description: "{\r
+description: |-
+  estado: 1 (Aprobado),3(Rechazado)
 
-  \    \"code\": 200,\r
 
-  \    \"status\": \"success\",\r
-
-  \    \"message\": \"Se Cambio el estado a la solicitud\",\r
-
-  \    \"data\": true\r
-
-  }"
+  {
+      "code": 200,
+      "status": "success",
+      "message": "Se Cambio el estado a la solicitud",
+      "data": true
+  }
 method: PUT
 body:
   params:
