--- a/.insomnia/Request/req_f8e1c1c90cf24b45b2b87fc939c01e33.yml
+++ b/.insomnia/Request/req_f8e1c1c90cf24b45b2b87fc939c01e33.yml
@@ -1,7 +1,7 @@
 _id: req_f8e1c1c90cf24b45b2b87fc939c01e33
 type: Request
 parentId: fld_6da23766d3bf4e2d8a9ef39d760974c7
-modified: 1606162228815
+modified: 1607093073071
 created: 1606161378808
 url: "{{ urlbase }}/actualizarTercero"
 name: actualizarTercero
@@ -26,30 +26,38 @@ description: "{\"identificacion\":1047487884,\r
   \"sexo\":1}"
 method: PUT
 body:
-  mimeType: ""
-  text: "{\"identificacion\":1047487884,\r
-
-    \"nombres\":\"jorge enrique\",\r
-
-    \"apellidos\":\"siachoque marin\",\r
-
-    \"fecha_nac\":\"1996-01-31\",\r
-
-    \"cod_tipo_id\":4,\r
-
-    \"email\":\"jorgesiachoque08@gmail.com\",\r
-
-    \"razon_social\":\"Campos\",\r
-
-    \"telefono\":\"(+57) 6531414\",\r
-
-    \"celular\":\"(+57)3013420572\",\r
-
-    \"sexo\":1}"
+  mimeType: application/x-www-form-urlencoded
+  params:
+    - name: nombres
+      value: manuel
+      description: ""
+      id: pair_0c230e9891c84234bb93d45b699f3d7f
+    - name: celular
+      value: "3013429572"
+      description: ""
+      id: pair_06b100ff60674723b03f7a73e1909863
+    - name: cod_tipo_id
+      value: "1"
+      description: ""
+      id: pair_e79f598e8ec64983a3202001b157f1b4
+    - name: identificacion
+      value: "123456789"
+      description: ""
+      id: pair_a9a2c087306d4b0c809dd258217154d4
+    - name: razon_social
+      value: ""
+      description: ""
+      id: pair_8956ef46928d41b39efb962cb9d3c206
+      disabled: true
+    - name: telefono
+      value: ""
+      description: ""
+      id: pair_bed69d1f4cd148b39beb676da93154aa
+      disabled: true
 parameters: []
 headers:
   - name: Content-Type
-    value: application/json
+    value: application/x-www-form-urlencoded
     id: pair_fd792b146ce349e2857469337421a22a
 authentication:
   type: bearer
