--- a/.insomnia/Request/req_a4264ba3b479472dbc8ce75036193477.yml
+++ b/.insomnia/Request/req_a4264ba3b479472dbc8ce75036193477.yml
@@ -1,9 +1,9 @@
 _id: req_a4264ba3b479472dbc8ce75036193477
 type: Request
 parentId: fld_20a8a3aa6f6b4d35bdd8466bae9483d0
-modified: 1607704294807
+modified: 1607704479508
 created: 1606251722191
-url: "{{ urlbase }}/filterProduct/agua/21"
+url: "{{ urlbase }}/filterProduct/21/agua"
 name: filterProduct
 description: |-
   
