--- a/.insomnia/Request/req_96fc6dfcb9b7409790f1ee39bdb1903c.yml
+++ b/.insomnia/Request/req_96fc6dfcb9b7409790f1ee39bdb1903c.yml
@@ -1,7 +1,7 @@
 _id: req_96fc6dfcb9b7409790f1ee39bdb1903c
 type: Request
 parentId: fld_c52e729fa751409995f4aea04784de3a
-modified: 1606857561587
+modified: 1607787753918
 created: 1606161372224
 url: "{{ urlbase }}/actualizarSucursal/1/15"
 name: actualizarSucursal
@@ -31,6 +31,10 @@ body:
       value: barrio boquilla calle 100-5
       description: ""
       id: pair_e6946c3b42e54199b19fe6c2ab15c9e1
+    - name: cod_departamento
+      value: "5"
+      description: ""
+      id: pair_e8ca81f86baa4065b529294ef16687c2
     - name: cod_municipio
       value: "1"
       description: ""
